sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Health_Cloud_Recommendation__mdt/SFDC_Health_Cloud_Recommendation__mdt.object-meta.xml
<CustomObject>
    <description>Recommendations specifically geared towards providing Pre-Sales text (which can potentially be place in any spot within the assessment report)</description>
    <label>SFDC Health Cloud Recommendation</label>
    <pluralLabel>SFDC Health Cloud Recommendations</pluralLabel>
</CustomObject>