sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Health_Cloud_Recommendation__mdt/fields/Answer_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Answer_API_Name__c</fullName>
    <description>The Developer Name for the SFDC Industry Assessment Answer that should be true to display this recommendation.</description>
    <inlineHelpText>The Developer Name for the SFDC Industry Assessment Answer that should be true to display this recommendation.</inlineHelpText>
    <label>Answer API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>