sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Health_Cloud_Recommendation__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>The SLDS icon to present next to this item</description>
    <inlineHelpText>The SLDS icon to present next to this item</inlineHelpText>
    <label>Icon Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>