sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Health_Cloud_Recommendation__mdt/fields/List_Index__c.field-meta.xml
<CustomField>
    <fullName>List_Index__c</fullName>
    <description>The order in which this item should appear.</description>
    <label>List Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>