sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Health_Cloud_Recommendation__mdt/fields/Recommendation_Label__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Label__c</fullName>
    <label>Recommendation Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>