sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Health_Cloud_Recommendation__mdt/fields/Render_Flags__c.field-meta.xml
<CustomField>
    <fullName>Render_Flags__c</fullName>
    <description>Checks for fields on the Assessment object to determine whether to show this content or not.</description>
    <inlineHelpText>Checks for fields on the Assessment object to determine whether to show this content or not.</inlineHelpText>
    <label>Render Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>