sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Health_Cloud_Recommendation__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>The report section in which this recommendation should appear.</description>
    <label>Section</label>
    <referenceTo>Assessment_Report_Section__mdt</referenceTo>
    <relationshipName>SFDC_Pre_Sales_Recommendations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>