sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Health_Cloud_Recommendation__mdt/listViews/All_Recommendations.listView-meta.xml
<ListView>
    <fullName>All_Recommendations</fullName>
    <columns>MasterLabel</columns>
    <columns>Section__c</columns>
    <columns>List_Index__c</columns>
    <columns>Answer_API_Name__c</columns>
    <columns>Icon_Name__c</columns>
    <columns>Recommendation_Label__c</columns>
    <columns>Render_Flags__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Recommendations</label>
    <language>en_US</language>
</ListView>